--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ body {
 
 .light-green {
   background-color: #ABE188;
+  color: white;
 }
 
 #title {
@@ -107,15 +108,18 @@ body {
   height: 30px;
 }
 
-#first-img {
+.big-img {
   width: 100%;
-  height: 440px;
-  background-image: url('../img/uno.jpg');
+  height: 640px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
+}
+
+#first-img {
+  background-image: url('../img/uno.jpg');
 }
 
 #about-pandas h3 {
@@ -133,12 +137,23 @@ body {
 }
 
 #second-img {
-  width: 100%;
-  height: 640px;
   background-image: url('../img/dos.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+}
+
+#pictures-title {
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+}
+
+#pictures img {
+  border: 10px solid white;
+}
+
+#third-img {
+  background-image: url('../img/tres.jpg');
+}
+
+footer {
+  text-align: right;
 }
