--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,10 +76,29 @@ img {
   width: 100%;
 }
 
-/* Mis estilos */
+/* Estilos que aplican a todos los tamaños de dispositivo */
 
 body {
   font-family: Raleway, sans-serif;
+}
+
+#title {
+  font-weight: 800;
+  text-align: right;
+}
+
+#subtitle {
+  text-align: right;
+  font-weight: 400;
+}
+
+#about-pandas {
+  text-align: center;
+}
+
+#pictures-title {
+  font-weight: 600;
+  text-align: center;
 }
 
 .peach {
@@ -92,28 +111,13 @@ body {
   color: white;
 }
 
-#title {
-  font-weight: 800;
-  font-size: 40px;
-  text-align: right;
-}
-
-#subtitle {
-  font-weight: 400;
-  font-size: 17px;
-  text-align: right;
-}
-
 .space {
   height: 30px;
 }
 
 .big-img {
-  width: 100%;
-  height: 640px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
@@ -122,32 +126,8 @@ body {
   background-image: url('../img/uno.jpg');
 }
 
-#about-pandas h3 {
-  font-size: 25px;
-  margin-bottom: 30px;
-}
-
-#about-pandas p {
-  font-size: 19px;
-}
-
-#about-pandas {
-  padding: 40px;
-  text-align: center;
-}
-
 #second-img {
   background-image: url('../img/dos.jpg');
-}
-
-#pictures-title {
-  font-size: 40px;
-  font-weight: 600;
-  text-align: center;
-}
-
-#pictures img {
-  border: 10px solid white;
 }
 
 #third-img {
