--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,11 +83,13 @@ body {
 }
 
 #title {
+  font-size: 40px;
   font-weight: 800;
   text-align: right;
 }
 
 #subtitle {
+  font-size: 17px;
   text-align: right;
   font-weight: 400;
 }
@@ -97,6 +99,7 @@ body {
 }
 
 #pictures-title {
+  font-size: 40px;
   font-weight: 600;
   text-align: center;
 }
@@ -132,6 +135,10 @@ body {
 
 #third-img {
   background-image: url('../img/tres.jpg');
+}
+
+#pictures img {
+  border: 10px solid white;
 }
 
 footer {
